--- a/index.html
+++ b/index.html
@@ -107,15 +107,14 @@
     
 <!-- Add font awesome icons -->
 
-<p> 
-<a href="https://twitter.com/Vardha_AITG" class="fab fa-twitter"></a>
+
+<p> <<a href="https://twitter.com/Vardha_AITG" class="fab fa-twitter"></a>
 <a href="mailto:vardha@iiserb.ac.in"class="fa-solid fa-envelope"></a>
 <a href="https://www.linkedin.com/in/varadharajan-srinivasan-581b264/" class="fab fa-linkedin"></a>
 <a href="https://chm.iiserb.ac.in/faculty_profile.php?id=Mjc=&lname=dmFyZGhh" class="fab fa-google"></a>
 <a href="https://github.com/LITESOPH/litesoph" class="fab fa-github"></a>
 <a href="https://www.researchgate.net/profile/Varadharajan-Srinivasan-4" class='fab fa-researchgate'></a>
-<a href="call:+91 755269 1315 " class='fa-solid fa-phone'></a>
-</p>
+<a href="call:+91 755269 1315 " class='fa-solid fa-phone'></a>></p>
       
 </body>
 </html> 
