--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Dr. Indranil Mal - Computational Materials Scientist specializing in DFT and Ferroelectric Materials">
-    <meta name="keywords" content="Indranil Mal, Computational Physics, DFT, Ferroelectric Materials, Materials Science, Quantum Computing">
-    <meta name="author" content="Dr. Indranil Mal">
-    <title>Dr. Indranil Mal - Computational Materials Scientist</title>
+    <meta name="description" content="Indranil Mal - Computational Materials Scientist specializing in DFT and Ferroelectric Materials">
+    <meta name="keywords" content="Indranil Mal, Computational Physics, DFT, Ferroelectric Materials, Materials Science, Quantum Computing, TDDFT, III-V Semiconductors">
+    <meta name="author" content="Indranil Mal">
+    <title>Indranil Mal - Computational Materials Scientist</title>
 
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -606,7 +606,7 @@
 
     <!-- Header -->
     <header>
-        <h1>Dr. Indranil Mal</h1>
+        <h1>Indranil Mal</h1>
         <p>Computational Materials Scientist</p>
         <p class="subtitle">P4F Fellow | Institute of Physics, Czech Academy of Sciences (FZU)</p>
         <p class="subtitle">Prague, Czech Republic</p>
@@ -640,28 +640,36 @@
             <h2>Research Interests</h2>
             <div class="research-grid">
                 <div class="research-card">
-                    <h3><i class="fas fa-atom"></i> Density Functional Theory</h3>
-                    <p>First-principles calculations using DFT and TD-DFT for materials characterization and property prediction.</p>
+                    <h3><i class="fas fa-atom"></i> Density Functional Theory (DFT)</h3>
+                    <p>First-principles calculations using DFT for studying III-V semiconductors, structural, thermodynamic, and optoelectronic property predictions.</p>
+                </div>
+                <div class="research-card">
+                    <h3><i class="fas fa-wave-square"></i> Time Dependent DFT (TDDFT)</h3>
+                    <p>Ab initio techniques for excited-state dynamics, photo-induced phenomena, and optical property calculations of materials.</p>
+                </div>
+                <div class="research-card">
+                    <h3><i class="fas fa-calculator"></i> k.p Hamiltonian Modeling</h3>
+                    <p>Mathematical modeling of optoelectronic properties of III-V semiconductors using multi-band k.p perturbation theory.</p>
+                </div>
+                <div class="research-card">
+                    <h3><i class="fas fa-microchip"></i> III-V Nanostructures</h3>
+                    <p>Growth, characterization, and theoretical investigation of III-V quantum wells, quantum dots, and nanostructures for optoelectronic devices.</p>
+                </div>
+                <div class="research-card">
+                    <h3><i class="fas fa-lightbulb"></i> Infrared Photodetectors</h3>
+                    <p>Design and simulation of long-wavelength infrared (LWIR) photodetectors using InAs, InSb, and Bismuth-based alloys.</p>
                 </div>
                 <div class="research-card">
                     <h3><i class="fas fa-bolt"></i> Ferroelectric Materials</h3>
-                    <p>Study of ferroelectric perovskites, their substrates, and applications in molecular optoelectronics and shape memory alloys.</p>
-                </div>
-                <div class="research-card">
-                    <h3><i class="fas fa-microchip"></i> Quantum Structures</h3>
-                    <p>Theoretical investigation of quantum confined structures, quantum-dot cellular automata (QCA), and quantum computing devices.</p>
-                </div>
-                <div class="research-card">
-                    <h3><i class="fas fa-lightbulb"></i> Optoelectronics</h3>
-                    <p>Research on optoelectronic properties of III-V alloys, infrared photodetector design, and hybrid organic-inorganic devices.</p>
-                </div>
-                <div class="research-card">
-                    <h3><i class="fas fa-sun"></i> Solar Energy</h3>
-                    <p>Excited-state dynamics toolkit combining ab initio and quantum system techniques for solar energy applications.</p>
+                    <p>Study of ferroelectric perovskites (PZTS, BNT) for shape memory applications and molecular optoelectronics substrates.</p>
                 </div>
                 <div class="research-card">
                     <h3><i class="fas fa-brain"></i> Neuromorphic Computing</h3>
-                    <p>Development of materials and devices for neuromorphic computing using ferroelectric materials and molecular switches.</p>
+                    <p>Development of computational toolkit for molecular quantum electronics and neuromorphic computing simulation using ferroelectric materials.</p>
+                </div>
+                <div class="research-card">
+                    <h3><i class="fas fa-atom-alt"></i> Transmon Qubit</h3>
+                    <p>Theoretical investigation of superconducting qubits for quantum computing applications.</p>
                 </div>
             </div>
         </section>
@@ -671,23 +679,37 @@
             <h2>Professional Experience</h2>
             <div class="timeline">
                 <div class="timeline-item">
-                    <h3>P4F Fellow</h3>
+                    <h3>Postdoctoral Fellow (P4F MSCA COFUND)</h3>
                     <p class="date">January 2025 - Present</p>
                     <p><strong>Institute of Physics, Czech Academy of Sciences (FZU), Prague</strong></p>
                     <p>Department of Condensed Matter Theory</p>
-                    <p>Working on molecular optoelectronics on ferroelectric substrates, exploring hybrid organic-inorganic devices for quantum electronics.</p>
+                    <p><strong>Project:</strong> Molecular Optoelectronics on Ferroelectric Substrates</p>
+                    <p><strong>Supervisor:</strong> Ing. Prokop Hapala, Ph.D.</p>
+                    <p>Developing computational toolkit for molecular quantum electronics and neuromorphic computing simulation. Exploring hybrid organic-inorganic devices that harness ferroelectric perovskites and molecular switches.</p>
                 </div>
                 <div class="timeline-item">
-                    <h3>Postdoctoral Researcher</h3>
-                    <p class="date">2023 - 2024</p>
+                    <h3>Postdoctoral Research Associate</h3>
+                    <p class="date">November 2022 - January 2025</p>
                     <p><strong>Indian Institute of Technology (IIT) Delhi</strong></p>
-                    <p>Studied ferroelectric materials for shape memory alloys using effective Hamiltonian approaches and computational modeling.</p>
+                    <p><strong>Project:</strong> Development of Shape Memory Oxide thin-films for Aerospace applications</p>
+                    <p><strong>Supervisors:</strong> Prof. Brajesh Kumar Mani and Prof. Ratnamala Chatterjee</p>
+                    <p>Theoretical and experimental development of doped PZTS and BNT perovskite for shape memory applications. Understanding phase-switching behavior, defect formation, and shape recovery process using effective Hamiltonian approaches.</p>
                 </div>
                 <div class="timeline-item">
-                    <h3>Postdoctoral Researcher</h3>
-                    <p class="date">2022 - 2023</p>
+                    <h3>Postdoctoral Research Associate</h3>
+                    <p class="date">February 2022 - November 2022</p>
                     <p><strong>Indian Institute of Science Education and Research (IISER) Bhopal</strong></p>
-                    <p>Developed excited-state dynamics toolkit combining ab initio and quantum system techniques for solar energy applications.</p>
+                    <p><strong>Project:</strong> Excited State Dynamics Toolkit</p>
+                    <p><strong>Supervisor:</strong> Dr. Varadharajan Srinivasan</p>
+                    <p>Developed comprehensive toolkit for computer simulations of photo-induced phenomena combining TDDFT and open quantum system approaches. Target applications include solar energy conversion (photovoltaics, water-splitting catalysts), optoelectronic materials, and photochemistry.</p>
+                </div>
+                <div class="timeline-item">
+                    <h3>Senior Research Fellow (SRF)</h3>
+                    <p class="date">November 2021 - February 2022</p>
+                    <p><strong>PDPM IIITDM Jabalpur</strong></p>
+                    <p><strong>Project:</strong> Analytical Modelling and Simulation of III-V nanostructure-based Hybrid Solar Cells</p>
+                    <p><strong>Supervisor:</strong> Dr. Dip Prakash Samajdar</p>
+                    <p>Design and simulation of nanostructures (nano-rod, nano-cone, and truncated-pyramidal) based solar cells using COMSOL Multiphysics.</p>
                 </div>
             </div>
         </section>
@@ -725,21 +747,33 @@
             <h2>Technical Skills & Competencies</h2>
             <div class="skills-grid">
                 <div class="skill-category">
-                    <h3><i class="fas fa-laptop-code"></i> Computational Tools</h3>
+                    <h3><i class="fas fa-laptop-code"></i> DFT & Electronic Structure Tools</h3>
                     <div class="skill-tags">
                         <span class="skill-tag">VASP</span>
                         <span class="skill-tag">ABINIT</span>
                         <span class="skill-tag">GPAW</span>
                         <span class="skill-tag">OCTOPUS</span>
+                        <span class="skill-tag">NWChem</span>
+                        <span class="skill-tag">WIEN2K</span>
                         <span class="skill-tag">Quantum Espresso</span>
                     </div>
                 </div>
                 <div class="skill-category">
-                    <h3><i class="fas fa-code"></i> Programming Languages</h3>
+                    <h3><i class="fas fa-cube"></i> Simulation & Modeling</h3>
+                    <div class="skill-tags">
+                        <span class="skill-tag">COMSOL Multiphysics</span>
+                        <span class="skill-tag">Lumerical</span>
+                        <span class="skill-tag">Mathematica</span>
+                        <span class="skill-tag">MATLAB</span>
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3><i class="fas fa-code"></i> Programming & Scripting</h3>
                     <div class="skill-tags">
                         <span class="skill-tag">Python</span>
                         <span class="skill-tag">C</span>
-                        <span class="skill-tag">MATLAB</span>
+                        <span class="skill-tag">Bash</span>
+                        <span class="skill-tag">Linux</span>
                         <span class="skill-tag">HTML/CSS</span>
                     </div>
                 </div>
@@ -748,9 +782,10 @@
                     <div class="skill-tags">
                         <span class="skill-tag">DFT</span>
                         <span class="skill-tag">TD-DFT</span>
-                        <span class="skill-tag">k.p Perturbation Theory</span>
+                        <span class="skill-tag">Multi-band k.p Theory</span>
                         <span class="skill-tag">Effective Hamiltonian</span>
                         <span class="skill-tag">GridFF</span>
+                        <span class="skill-tag">Molecular Dynamics</span>
                     </div>
                 </div>
             </div>
@@ -780,28 +815,16 @@
             <h2>GitHub Projects & Contributions</h2>
             <div class="projects-grid">
                 <div class="project-card">
+                    <h3><i class="fab fa-github"></i> FireCore</h3>
+                    <span class="project-lang">Python / C++</span>
+                    <p>Advanced computational toolkit for molecular dynamics and electronic structure calculations. Collaborative project focusing on efficient atomistic simulations and force-field methods.</p>
+                    <a href="https://github.com/ProkopHapala/FireCore" target="_blank" rel="noopener noreferrer">View Repository <i class="fas fa-external-link-alt"></i></a>
+                </div>
+                <div class="project-card">
                     <h3><i class="fab fa-github"></i> LITESOPH</h3>
                     <span class="project-lang">Python</span>
-                    <p>Layer Integrated Toolkit and Engine for Simulations of Photoexcited Holes - A comprehensive toolkit for computational spectroscopy.</p>
+                    <p>Layer Integrated Toolkit and Engine for Simulations of Photoexcited Holes - Comprehensive toolkit for computational spectroscopy and excited-state dynamics using TDDFT.</p>
                     <a href="https://github.com/LITESOPH/litesoph" target="_blank" rel="noopener noreferrer">View Repository <i class="fas fa-external-link-alt"></i></a>
-                </div>
-                <div class="project-card">
-                    <h3><i class="fab fa-github"></i> DFT_visual</h3>
-                    <span class="project-lang">Python</span>
-                    <p>Density Functional Theory visualization tools for analyzing and visualizing computational chemistry results.</p>
-                    <a href="https://github.com/Indranil2020/DFT_visual" target="_blank" rel="noopener noreferrer">View Repository <i class="fas fa-external-link-alt"></i></a>
-                </div>
-                <div class="project-card">
-                    <h3><i class="fab fa-github"></i> VASP Tutorial</h3>
-                    <span class="project-lang">Python</span>
-                    <p>Educational resources and tutorials for Vienna Ab initio Simulation Package (VASP) computational methods.</p>
-                    <a href="https://github.com/Indranil2020/vasp_tutorial" target="_blank" rel="noopener noreferrer">View Repository <i class="fas fa-external-link-alt"></i></a>
-                </div>
-                <div class="project-card">
-                    <h3><i class="fab fa-github"></i> Personal Website</h3>
-                    <span class="project-lang">HTML/CSS</span>
-                    <p>This personal website and portfolio showcasing research, publications, and interactive tools.</p>
-                    <a href="https://github.com/Indranil2020/Indranil2020.github.io" target="_blank" rel="noopener noreferrer">View Repository <i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
         </section>
@@ -809,26 +832,29 @@
         <!-- Tools & Apps Section -->
         <section id="tools">
             <h2>Interactive Tools & Applications</h2>
-            <p style="color: #666; margin-bottom: 1.5rem;">Interactive computational tools and applications for research and analysis.</p>
+            <p style="color: #666; margin-bottom: 1.5rem;">Interactive computational tools and applications for research and analysis. These Streamlit-powered applications enable researchers worldwide to perform calculations directly from their browser.</p>
             <div class="tools-grid">
                 <div class="tool-card">
-                    <h3><i class="fas fa-chart-line"></i> Data Analysis Tool</h3>
-                    <p>Interactive Streamlit application for analyzing computational results and visualizing materials properties from DFT calculations.</p>
-                    <a href="#" onclick="alert('Add your Streamlit app URL here'); return false;">Launch App</a>
+                    <h3><i class="fas fa-atom"></i> Basis Set Visualizer</h3>
+                    <p>Interactive visualization of atomic basis sets from the Basis Set Exchange (BSE). Explore and analyze basis functions for DFT calculations with real-time 3D visualization and parameter adjustments.</p>
+                    <a href="./tools/basis-set-viewer.html" style="background: #28a745;">Launch Tool <i class="fas fa-external-link-alt"></i></a>
+                    <p style="margin-top: 0.5rem; font-size: 0.85rem; color: #888;">
+                        <i class="fab fa-github"></i> Source: <a href="https://github.com/Indranil2020/DFT_visual" target="_blank" style="color: #3498db; text-decoration: none;">DFT_visual</a>
+                    </p>
                 </div>
                 <div class="tool-card">
-                    <h3><i class="fas fa-cube"></i> Structure Viewer</h3>
-                    <p>Visualize and analyze crystal structures, molecular configurations, and quantum systems in 3D with interactive controls.</p>
-                    <a href="#" onclick="alert('Add your Streamlit app URL here'); return false;">Launch App</a>
+                    <h3><i class="fas fa-wave-square"></i> k.p Band Structure Calculator</h3>
+                    <p>Calculate and visualize electronic band structures of III-V semiconductors using multi-band k.p perturbation theory. Interactive parameter tuning for quantum wells and heterostructures.</p>
+                    <a href="#" onclick="alert('Coming Soon! Currently under development.'); return false;" style="background: #6c757d; cursor: not-allowed;">Coming Soon</a>
                 </div>
                 <div class="tool-card">
-                    <h3><i class="fas fa-wave-square"></i> Band Structure Calculator</h3>
-                    <p>Calculate and visualize electronic band structures of materials using computational methods and k.p theory.</p>
-                    <a href="#" onclick="alert('Add your Streamlit app URL here'); return false;">Launch App</a>
+                    <h3><i class="fas fa-lightbulb"></i> Optoelectronic Property Calculator</h3>
+                    <p>Compute optoelectronic properties of semiconductor materials and quantum structures. Includes absorption spectra, gain calculations, and device performance predictions.</p>
+                    <a href="#" onclick="alert('Coming Soon! Planned for future release.'); return false;" style="background: #6c757d; cursor: not-allowed;">Coming Soon</a>
                 </div>
             </div>
             <p style="margin-top: 2rem; color: #666; font-style: italic;">
-                <i class="fas fa-info-circle"></i> More tools coming soon! These applications are built using Streamlit and Python for interactive scientific computing.
+                <i class="fas fa-info-circle"></i> These applications are built using Streamlit and Python, providing free access to computational tools for the global research community. New tools are added regularly!
             </p>
         </section>
 
@@ -911,7 +937,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Dr. Indranil Mal. All rights reserved.</p>
+        <p>&copy; 2025 Indranil Mal. All rights reserved.</p>
         <p>Computational Materials Scientist | P4F Fellow at Institute of Physics, Czech Academy of Sciences</p>
         <p>Last updated: November 2025</p>
     </footer>
