Add comprehensive publications page with all 40 research contributions
- Created publications.html with all 21 journal articles, 7 book chapters, and 12 conference papers
- Added DOI links for all publications with proper reverse chronological ordering
- Integrated publications page with homepage via prominent "View All Publications" button
- Simplified navigation menu across all pages (About, Research, Publications, Tools, Contact)
- Updated navigation in tools/basis-set-viewer.html for consistency
- Added statistics section showing publication breakdown
- Included links to Google Scholar, ResearchGate, ORCID, and Web of Science profiles

--- a/index.html
+++ b/index.html
@@ -730,14 +730,7 @@
         <ul>
             <li><a href="#about">About</a></li>
             <li><a href="#research">Research</a></li>
-            <li><a href="#current-project">Current Project</a></li>
-            <li><a href="#projects">GitHub Projects</a></li>
-            <li><a href="#publications">Publications</a></li>
-            <li><a href="#previous-research">Previous Research</a></li>
-            <li><a href="#conferences">Conferences</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#memberships">Memberships</a></li>
+            <li><a href="publications.html">Publications</a></li>
             <li><a href="#tools">Tools</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -843,7 +836,15 @@
         <section id="publications">
             <h2>Publications & Research Profiles</h2>
             <div class="publications-content">
-                <p>Explore my research contributions, publications, and academic profiles:</p>
+                <p style="margin-bottom: 1.5rem; font-size: 1.1rem;"><strong>40 peer-reviewed publications</strong> including 21 journal articles, 7 book chapters, and 12 conference papers.</p>
+
+                <div style="text-align: center; margin-bottom: 2rem;">
+                    <a href="publications.html" style="display: inline-flex; align-items: center; gap: 0.7rem; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 1rem 2rem; border-radius: 8px; text-decoration: none; font-size: 1.1rem; font-weight: 600; box-shadow: 0 4px 12px rgba(102, 126, 234, 0.3); transition: all 0.3s;">
+                        <i class="fas fa-book-open"></i> View All Publications
+                    </a>
+                </div>
+
+                <p>Academic profiles:</p>
                 <div class="pub-links">
                     <a href="https://scholar.google.com/citations?user=vDMppM8AAAAJ&hl=en" class="pub-link scholar" target="_blank" rel="noopener noreferrer">
                         <i class="fas fa-graduation-cap"></i> Google Scholar
