--- a/tools/basis-set-viewer.html
+++ b/tools/basis-set-viewer.html
@@ -213,8 +213,9 @@
             <ul class="nav-menu">
                 <li><a href="../index.html"><i class="fas fa-home"></i>Home</a></li>
                 <li><a href="../index.html#research"><i class="fas fa-flask"></i>Research</a></li>
-                <li><a href="../index.html#publications"><i class="fas fa-book"></i>Publications</a></li>
-                <li><a href="https://github.com/Indranil2020" target="_blank"><i class="fab fa-github"></i>GitHub</a></li>
+                <li><a href="../publications.html"><i class="fas fa-book"></i>Publications</a></li>
+                <li><a href="../index.html#tools"><i class="fas fa-tools"></i>Tools</a></li>
+                <li><a href="../index.html#contact"><i class="fas fa-envelope"></i>Contact</a></li>
             </ul>
         </div>
     </nav>
