--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
         <section id="publications">
             <h2>Publications & Research Profiles</h2>
             <div class="publications-content">
-                <p style="margin-bottom: 1.5rem; font-size: 1.1rem;"><strong>40 peer-reviewed publications</strong> including 21 journal articles, 7 book chapters, and 12 conference papers.</p>
+                <p style="margin-bottom: 1.5rem; font-size: 1.1rem;"><strong>35 peer-reviewed publications</strong> including 20 journal articles, 7 book chapters, and 8 conference papers.</p>
 
                 <div style="text-align: center; margin-bottom: 2rem;">
                     <a href="publications.html" style="display: inline-flex; align-items: center; gap: 0.7rem; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 1rem 2rem; border-radius: 8px; text-decoration: none; font-size: 1.1rem; font-weight: 600; box-shadow: 0 4px 12px rgba(102, 126, 234, 0.3); transition: all 0.3s;">
@@ -889,6 +889,12 @@
                     <span class="date">November 2021 - February 2022</span>
                     <p><strong>Institution:</strong> PDPM IIITDM Jabalpur (Senior Research Fellow)</p>
                     <p><strong>Focus:</strong> Design and simulation of III-V nanostructures (nano-rod, nano-cone, and truncated-pyramidal geometries) based hybrid solar cells using COMSOL Multiphysics. Analytical modeling and optimization of device performance for enhanced light absorption and charge collection efficiency.</p>
+                </div>
+                <div class="research-project-item">
+                    <h3>Digital Watermarking and Signal Processing</h3>
+                    <span class="date">2015 - 2017</span>
+                    <p><strong>Institution:</strong> National Institute of Technology (NIT) Arunachal Pradesh (M.Tech Research)</p>
+                    <p><strong>Focus:</strong> Research on digital watermarking techniques based on phase congruency for secure information embedding and authentication. Investigated robust watermarking algorithms for digital content protection and signal processing applications in mobile communication systems.</p>
                 </div>
             </div>
         </section>
