Add M.Sc research and fix M.Tech details + Google Scholar auto-sync
- Fixed M.Tech research (2016-2017): Updated to correct title 'Studies on III-V Dilute Nitride, Bismuth and Antimonide Alloys' with Dr. T. D. Das
- Added M.Sc research (2012-2013): 'Strain-Balanced Ge-Sn Multiple Quantum Well LASER' with Dr. Bratati Mukhuopadhyay at University of Calcutta
- Created automated Google Scholar sync system for monthly publication updates
- Added Python scripts for fetching publications with citations from Scholar
- Set up GitHub Actions workflow for automatic monthly sync
- Publications will now auto-update with citation counts

--- a/index.html
+++ b/index.html
@@ -891,10 +891,18 @@
                     <p><strong>Focus:</strong> Design and simulation of III-V nanostructures (nano-rod, nano-cone, and truncated-pyramidal geometries) based hybrid solar cells using COMSOL Multiphysics. Analytical modeling and optimization of device performance for enhanced light absorption and charge collection efficiency.</p>
                 </div>
                 <div class="research-project-item">
-                    <h3>Digital Watermarking and Signal Processing</h3>
-                    <span class="date">2015 - 2017</span>
+                    <h3>Studies on III-V Dilute Nitride, Bismuth and Antimonide Alloys</h3>
+                    <span class="date">2016 - 2017</span>
                     <p><strong>Institution:</strong> National Institute of Technology (NIT) Arunachal Pradesh (M.Tech Research)</p>
-                    <p><strong>Focus:</strong> Research on digital watermarking techniques based on phase congruency for secure information embedding and authentication. Investigated robust watermarking algorithms for digital content protection and signal processing applications in mobile communication systems.</p>
+                    <p><strong>Supervisor:</strong> Dr. T. D. Das</p>
+                    <p><strong>Focus:</strong> Theoretical investigation of III-V dilute nitride, bismuth and antimonide alloys using multi-band k.p Hamiltonian. Research focused on understanding the electronic band structure and optoelectronic properties of these advanced semiconductor materials for next-generation optoelectronic devices.</p>
+                </div>
+                <div class="research-project-item">
+                    <h3>Strain-Balanced Ge-Sn Multiple Quantum Well LASER</h3>
+                    <span class="date">2012 - 2013</span>
+                    <p><strong>Institution:</strong> University of Calcutta (M.Sc Research)</p>
+                    <p><strong>Supervisor:</strong> Dr. Bratati Mukhuopadhyay</p>
+                    <p><strong>Focus:</strong> Theoretical investigation of strain-balanced Ge<sub>z</sub>Sn<sub>1-z</sub>–Si<sub>x</sub>Ge<sub>y</sub>Sn<sub>1-x-y</sub> multiple quantum well laser structures. Studied the optical and electronic properties of these materials for silicon-compatible laser applications in the Department of Radio Physics and Electronics.</p>
                 </div>
             </div>
         </section>
