Add collaborators page with interactive world map
- Created collaborators.html with Leaflet.js interactive map
- Shows 37 collaborators across 8 institutions in 3 countries
- Map displays institution pins sized by collaboration count
- Added collaborator cards with details and paper counts
- Integrated navigation links in index.html and publications.html
- Updated sitemap.xml with collaborators page
- Generated data/collaborators.json with all co-author details
- Added scripts/extract_collaborators.py for data extraction

--- a/publications.html
+++ b/publications.html
@@ -307,6 +307,7 @@
                 <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
                 <li><a href="index.html#research"><i class="fas fa-flask"></i>Research</a></li>
                 <li><a href="publications.html"><i class="fas fa-book"></i>Publications</a></li>
+                <li><a href="collaborators.html"><i class="fas fa-users"></i>Collaborators</a></li>
                 <li><a href="index.html#tools"><i class="fas fa-tools"></i>Tools</a></li>
                 <li><a href="https://github.com/Indranil2020" target="_blank"><i class="fab fa-github"></i>GitHub</a></li>
             </ul>
