--- a/index.html
+++ b/index.html
@@ -731,6 +731,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#research">Research</a></li>
             <li><a href="publications.html">Publications</a></li>
+            <li><a href="collaborators.html">Collaborators</a></li>
             <li><a href="#tools">Tools</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
