official link added

--- a/index.html
+++ b/index.html
@@ -865,6 +865,14 @@
         </div>
     </header>
 
+    <div style="background: #667eea; color: white; text-align: center; padding: 1rem; font-size: 1.1rem;">
+        <strong>Official Profile:</strong> 
+        <a href="https://p4f.fzu.cz/fzu_fellow/indranil-mal-ph-d/" 
+           style="color: white; text-decoration: underline;">
+            Marie Curie Fellow at Czech Academy of Sciences
+        </a>
+    </div>
+
     <div class="container">
         <!-- About Section -->
         <section id="about">
